--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>miyanorozu的個人網頁</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     
     <body>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200&family=Big+Shoulders+Display&family=Cormorant+Garamond&family=Roboto+Slab:wght@200;300&family=Righteous&family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
 
@@ -24,9 +24,9 @@
             </div>
             <center>
                 <div class="main">
-                    <div class="bord"></div>
+                    <hr class="bord" />
                     <div class="wota">關於我</div>
-                    <div class="bord pc"></div>
+                    <hr class="bord pc" />
                     <div class="intro">
                         <p>叫我<b>薔薇</b>或Nacht都可以，最近嚴重潛水。</p>
                         <p>是個mean girl，特別在某些方面。</p>
@@ -35,15 +35,15 @@
                         <p>也會追星，基本上只追日星，比較佛系，日圈新聞多少都會看。</p>
                         <p>沒什麼雷點，我都OK的。</p>
                     </div>
-                    <div class="bord"></div>
+                    <hr class="bord" />
                     <div class="wota">Plurk相關</div>
-                    <div class="bord pc"></div>
+                    <hr class="bord pc" />
                     <div class="intro">
                         <p>河道組成：SixTONES、LDH、發牢騷和二次元</p>
                     </div>
-                    <div class="bord"></div>
+                    <hr class="bord" />
                     <div class="wota">目前的坑和推し</div>
-                    <div class="bord pc"></div>
+                    <hr class="bord pc" />
                     <div class="intro">
                         <center>這裡只列三次元的，現在沒有認真推的二次元。</center>
                     </div>
@@ -56,6 +56,7 @@
                             <tr>
                                 <td>SixTONES</td>
                                 <td>
+                                    <b>メンバー：</b>
                                     <ul>
                                         <li>京本大我</li>
                                         <li>路易斯傑西</li>
@@ -76,25 +77,52 @@
                             </tr>
                             <tr>
                                 <td></td>
-                                <td><b>歌曲：</b><br>"Laugh" In the LIFE<br>RAM-PAM-PAM<br>NEW WORLD<br>
-                                    うやむや<br>IN THE STORM<br>Hysteria<br>Lifetime<br>Mad Love<br>
-                                    Bella<br>僕が僕じゃないみたいだ
+                                <td>
+                                    <b>歌曲：</b>
+                                    <ul>
+                                        <li>"Laugh" In the LIFE</li>
+                                        <li>RAM-PAM-PAM</li>
+                                        <li>NEW WORLD</li>
+                                        <li>うやむや</li>
+                                        <li>IN THE STORM</li>
+                                        <li>Hysteria</li>
+                                        <li>Lifetime</li>
+                                        <li>Mad Love</li>
+                                        <li>Bella</li>
+                                        <li>僕が僕じゃないみたいだ</li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr>
                                 <td>三代目J SOUL BROTHERS</td>
-                                <td>岩田剛典<br>登坂廣臣</td>
+                                <td>
+                                    <b>メンバー：</b>
+                                    <ul>
+                                        <li>岩田剛典</li>
+                                        <li>登坂廣臣</li>
+                                    </ul>
                             </tr>
                             <tr>
                                 <td></td>
-                                <td><b>歌曲：</b><br>(YOU SHINE) THE WORLD<br>starting over<br>
-                                    J.S.B. DREAM<br>Welcome to TOKYO<br>冬物語<br>BREAK OF DAWN<br>
-                                    Dream Girl<br>Share The Love<br>RAINBOW<br>On Your Mark ~ヒカリのキセキ~
+                                <td>
+                                    <b>歌曲：</b>
+                                    <ul>
+                                        <li>(YOU SHINE) THE WORLD</li>
+                                        <li>starting over</li>
+                                        <li>J.S.B. DREAM</li>
+                                        <li>Welcome to TOKYO</li>
+                                        <li>冬物語</li>
+                                        <li>BREAK OF DAWN</li>
+                                        <li>Dream Girl</li>
+                                        <li>Share The Love</li>
+                                        <li>RAINBOW</li>
+                                        <li>On Your Mark ~ヒカリのキセキ~</li>
+                                    </ul>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <div class="bord"></div>
+                    <hr class="bord" />
                     <div class="special">
                         <a href="#back">Go top</a>
                     </div>
