--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
                 filter: invert(100%) hue-rotate(160deg);
             }
             .bright_font {
-                color: #000;
+                color: #FFF;
+                outline-color: #FFF;
             }
         </style>
         <script>
