--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <div class="bg3"></div>
             <div class="bg4"></div>
             <div class="bar" id="back">
-                    <div><a href="#">Forum</a></div>
-                    <div><a href="#">Chat</a></div>
+                    <div><a href="#bias">My Bias</a></div>
                     <div><a href="#" onclick="bright()">Change Color</a></div>
                     <div><a href="#" onclick="confirmCSS()">Design</a></div>
             </div>
@@ -41,7 +40,7 @@
                         <p>河道組成：SixTONES、LDH、發牢騷和二次元</p>
                     </div>
                     <hr class="bord" />
-                    <div class="wota">目前的坑和推し</div>
+                    <div class="wota" id="bias">目前的坑和推し</div>
                     <hr class="bord pc" />
                     <div class="intro">
                         <center>這裡只列三次元的，現在沒有認真推的二次元。</center>
