--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             align-items: center;
             background: rgb(67, 56, 87);
             font-family: 'Quicksand', Noto Sans TC;
+            overflow-x: hidden;
          }
 
          /* 上方選單設定：背景色、字體、flex設定 */
