--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
             /* 白色主題 */
             .bright {
                 filter: invert(100%) hue-rotate(160deg);
+                overflow-x: hidden;
             }
             
         </style>
