--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
                                 <td>
                                     <b>メンバー：</b>
                                     <ul>
-                                        <?php
-                                            echo '<li>京本大我</li>';
-                                            echo '<li>路易斯傑西</li>';
-                                            echo '<li>田中樹</li>';
-                                        ?>
+                                        <li>京本大我</li>;
+                                        <li>路易斯傑西</li>;
+                                        <li>田中樹</li>;
                                     </ul>
                                 </td>
                             </tr>
